# zana-core

./: .coverage  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Caddyfile  LICENSE  README.md  activate_xana.py  activate_zana.py  build-desktop.sh  chaos_report.json  docker-compose.yml  install.sh  main.py  publish-release.sh  pyproject.toml  ruff.toml  setup.sh  test_index.json  uninstall.sh
aria-ui/src-tauri/: Cargo.toml  tauri.conf.json
aria-ui/src-tauri/.cargo/: config.toml
aria-ui/src-tauri/capabilities/: default.json
aria-ui/src-tauri/resources/: zana.desktop
aria-ui/src-tauri/scripts/: postinst.sh
aria-ui/src-tauri/src/: commands.rs  daemon.rs  lib.rs  (+2 more)
armor/: Cargo.toml
armor/src/: lib.rs
cli/: README.md  pyproject.toml
cli/autonomy/: autonomous_orchestrator.py  brain.py  crypto.py  forge.py  genome.py  refactor_agent.py  resonance_engine.py  reward_engine.py  storage_adapters.py  strategy_tournament.py  sync_engine.py
cli/cli/: main.py  sentinel_hooks.py
cli/tests/: test_onboarding.py  test_security.py  test_zsm_intents.py
cli/zana/: main.py  sentinel_hooks.py
embedder/: chunker.py  config.py  main.py  pyproject.toml  watcher.py
episodic/: init_db.py  kalman.py  main.py  pyproject.toml
episodic/tests/: test_episodic_memory.py  test_init_db.py
idle_zero/: Cargo.toml  real_data.txt  skill_01_seed.json  transcoder.py
idle_zero/champions/: agora_acelerador_de_aprendizaje.json  agora_arquitectura_de_la_virtud.json  agora_artesano_de_software.json  agora_compositor_musical_asistido.json  agora_comunicaci_n_de_alto_impacto.json  agora_conexi_n_espiritual.json  agora_conquista_del_miedo.json  agora_cuidado_de_personas_mayores.json  agora_desbloqueador_de_creatividad.json  agora_descubrimiento_del_prop_sito__ikigai_.json  agora_diario_inteligente.json  agora_duelo_y_p_rdida.json  agora_el_pacto__an_lisis_de_compatibilidad_.json  agora_el_rito_de_paso.json  agora_entrenador_f_sico_adaptativo.json  agora_entrenamiento_del_pensamiento_cr_tico.json  agora_escritor_asistido.json  agora_establecimiento_de_l_mites_saludables.json  agora_exploraci_n_art_stica.json  agora_filantrop_a_estrat_gica.json  agora_fortalecimiento_de_la_red_social.json  agora_gesti_n_de_enfermedades_cr_nicas.json  agora_gestor_de_ansiedad_y_estr_s__tcc_.json  agora_incubadora_negocios.json  agora_laboratorio_de_investigaci_n.json  agora_m_dulo__gesti_n_de_la_riqueza___mente_millonaria__.json  agora_m_dulo__incubadora_de_negocios.json  agora_m_dulo__negociaci_n_efectiva.json  agora_maestr_a_acelerada_de_idiomas.json  agora_maestr_a_en_liderazgo.json  agora_maestr_a_social___tica_.json  agora_maestria_liderazgo.json  agora_mentor_a_inversa.json  agora_negociacion_efectiva.json  agora_nutrici_n_personalizada.json  agora_optimizaci_n_de_la_productividad__deep_work_.json  agora_optimizaci_n_del_sue_o.json  agora_organizador_de_conocimiento__segundo_cerebro_.json  agora_paternidad_consciente.json  agora_planificaci_n_de_eventos_sociales.json  (+14 more)
idle_zero/seeds/: agora_acelerador_de_aprendizaje.json  agora_arquitectura_de_la_virtud.json  agora_artesano_de_software.json  agora_compositor_musical_asistido.json  agora_comunicaci_n_de_alto_impacto.json  agora_conexi_n_espiritual.json  agora_conquista_del_miedo.json  agora_cuidado_de_personas_mayores.json  agora_desbloqueador_de_creatividad.json  agora_descubrimiento_del_prop_sito__ikigai_.json  agora_diario_inteligente.json  agora_duelo_y_p_rdida.json  agora_el_pacto__an_lisis_de_compatibilidad_.json  agora_el_rito_de_paso.json  agora_entrenador_f_sico_adaptativo.json  agora_entrenamiento_del_pensamiento_cr_tico.json  agora_escritor_asistido.json  agora_establecimiento_de_l_mites_saludables.json  agora_exploraci_n_art_stica.json  agora_filantrop_a_estrat_gica.json  agora_fortalecimiento_de_la_red_social.json  agora_gesti_n_de_enfermedades_cr_nicas.json  agora_gestor_de_ansiedad_y_estr_s__tcc_.json  agora_incubadora_negocios.json  agora_laboratorio_de_investigaci_n.json  agora_m_dulo__gesti_n_de_la_riqueza___mente_millonaria__.json  agora_m_dulo__incubadora_de_negocios.json  agora_m_dulo__negociaci_n_efectiva.json  agora_maestr_a_acelerada_de_idiomas.json  agora_maestr_a_en_liderazgo.json  agora_maestr_a_social___tica_.json  agora_maestria_liderazgo.json  agora_mentor_a_inversa.json  agora_negociacion_efectiva.json  agora_nutrici_n_personalizada.json  agora_optimizaci_n_de_la_productividad__deep_work_.json  agora_optimizaci_n_del_sue_o.json  agora_organizador_de_conocimiento__segundo_cerebro_.json  agora_paternidad_consciente.json  agora_planificaci_n_de_eventos_sociales.json  (+14 more)
idle_zero/src/: evolve_skill_01.rs  global_tournament.rs  hive_test.rs  lib.rs  main.rs
mcp/zana-discord/: bot.py  pyproject.toml  server.py
mcp/zana-memory/: pyproject.toml  server.py  test_mcp.py
mcp/zana-slack/: bot.py  pyproject.toml  server.py
mcp/zana-symbiosis/: main.py  mock_koruos.py  pyproject.toml  server.py
mcp/zana-world/: pyproject.toml  server.py  test_redis_mcp.py  test_world.py
orchestrator/: background_scheduler.py  budget.py  chronicler.py  compressor.py  curator.py  graph.py  heartbeat.py  pyproject.toml  trajectory.py  transport.py
registry/: Cargo.toml
registry/src/: main.rs
rust_core/: Cargo.toml
rust_core/forge/: eml_reconstruct_log.rs
rust_core/src/: brain.rs  eml.rs  kalman.rs  lib.rs  main.rs  memory.rs  projects.rs  wasm.rs
sensory/: Dockerfile  __init__.py  armor_middleware.py  audio_processor.py  control_router.py  identity_router.py  identity_utils.py  local_llm.py  memory_router.py  multimodal_gateway.py  perception_event.py  projects_router.py  pyproject.toml  reasoning_router.py  run.sh  search_router.py  sentinel_router.py  tts_engine.py  vision_processor.py  wisdom_router.py  zana-gateway.spec
sensory/tests/: test_identity_utils.py  test_multimodal_gateway.py  test_projects_router.py
shadow_observer/: Cargo.toml
shadow_observer/src/: main.rs
telegram_bot/: Dockerfile  __init__.py  bot.py  gateway_client.py  handlers.py  pyproject.toml  rate_limiter.py
(+282 files in other folders)
