[project]
name = "zana"
version = "2.9.2"
description = "ZANA — Zero Autonomous Neural Architecture CLI"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "John Tapias", email = "absurdoeco@gmail.com" }]
keywords = ["ai", "agent", "cognitive", "autonomous", "zana"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "prompt_toolkit>=3.0.0",
    "boto3>=1.42.97",
    "cryptography>=43.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
zana = "cli.main:app"

[project.urls]
Homepage = "https://github.com/kemquiros/zana-core"
Repository = "https://github.com/kemquiros/zana-core"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cli", "autonomy"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
