[project]
name = "vecanova-zana"
version = "3.2.0"
description = "Sovereign AI agent with 4-store local memory, Aeon DNA identity, and SHA-256 Civic Ledger — LLM-agnostic, zero Docker, runs on your hardware"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "John Tapias", email = "absurdoeco@gmail.com" }]
keywords = [
    "ai", "agent", "autonomous", "local-ai", "sovereign", "memory",
    "llm", "obsidian", "cognitive", "zana", "vecanova",
    "local-first", "privacy", "personal-ai", "aeon"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "questionary>=2.0.0",
    "httpx>=0.27.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "prompt_toolkit>=3.0.0",
    "boto3>=1.42.97",
    "cryptography>=43.0.0",
    "numpy>=1.26.0",
]

[project.scripts]
zana = "zana.main:app"

[project.urls]
Homepage = "https://zana.vecanova.com"
Repository = "https://github.com/Kemquiros/zana-core"
"Bug Tracker" = "https://github.com/Kemquiros/zana-core/issues"
Changelog = "https://github.com/Kemquiros/zana-core/releases"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["zana", "autonomy"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
