[project]
name = "xana-episodic"
version = "0.1.0"
description = "XANA Episodic Memory"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "numpy>=2.4.4",
]

[tool.uv]
package = false
