[package]
name = "zana_idle_zero"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
ndarray = "0.15" # For high-performance matrix/vector ops
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.13.2", features = ["json"] }
rayon = "1.12.0"

[[bin]]
name = "zana_idle_zero"
path = "src/main.rs"

[[bin]]
name = "hive_test"
path = "src/hive_test.rs"

[[bin]]
name = "evolve_skill_01"
path = "src/evolve_skill_01.rs"

[[bin]]
name = "global_tournament"
path = "src/global_tournament.rs"
