[package]
name = "xana_steel_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "xana_steel_core"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand = "0.8"
rand_distr = "0.4"
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[features]
python = ["dep:pyo3"]
default = ["python"]

[[bin]]
name = "benchmark"
path = "src/main.rs"

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
panic         = "abort"

[profile.release.build-override]
opt-level = 3
