[package]
name = "zana-desktop"
version = "2.8.2"
edition = "2021"
rust-version = "1.77"

[lib]
name = "zana_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell      = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
tokio          = { version = "1", features = ["full"] }
rusqlite       = { version = "0.31", features = ["bundled"] }
reqwest        = { version = "0.12", features = ["json"] }
dirs           = "5"
log            = "0.4"
env_logger     = "0.11"
anyhow         = "1"
tauri-plugin-dialog = "2.0.0-rc.8"
tauri-plugin-fs = "2.0.0-rc.6"
tauri-plugin-updater = "2.0.0-rc.4"
tauri-plugin-process = "2.0.0-rc.1"

[profile.release]
opt-level  = "z"
lto        = true
strip      = true
codegen-units = 1
panic      = "abort"
