[project]
name = "zana-discord"
version = "2.0.0"
description = "ZANA MCP Server for Discord — expose cognitive tools + run Discord bot"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3.0",
    "discord.py>=2.4.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[project.scripts]
zana-discord = "server:main"
zana-discord-bot = "bot:main"

[tool.uv]
package = false
