[project]
name = "zana-world-mcp"
version = "0.1.0"
description = "ZANA MCP World Model Server (Phase 4)"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.3.0",
    "neo4j>=5.24.0",
    "python-dotenv>=1.0.0",
    "redis>=7.4.0",
]

[project.scripts]
zana-world = "server:main"

[tool.uv]
package = false
